--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Travel Time</title>
 </head>
 <body>
+
+  <header>
+    <div id="header-text">Travel Time</div>
+  </header>
+
+
+
   <nav>
     <span id="home-link" class="nav-link">Home</span>
     <span id="signup-link" class="nav-link">Sign Up</span>
@@ -15,11 +22,12 @@
     <span id="search-link" class="nav-link">Search</span>
   </nav>
 
-
-  <!-- Home form form -->
+ <!-- Home form form -->
   <section id="home-content">
-    welcome
+    Welcome to Travel Time
   </section>
+
+ 
 
 <!-- Sign up form -->
 
@@ -61,7 +69,7 @@
   
   </section>
 
-<p class="hidden" id="result">sdgsdgsgdsdggsdgs</p>
+<p class="hidden" id="result"></p>
 
   
 
@@ -72,6 +80,5 @@
   </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
   <script src="/main.js" defer async></script>
-  <script src="/style.css" defer async></script>
 </body>
 </html>
