final touches to website layout

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       <input type="text" id="search-country" placeholder="Country">
 
       <input type="submit" value="Search">
+      <input type="submit" value="Save">
+      <input type="submit" value="Clear">
       
     </form>
   
@@ -71,13 +73,11 @@
 
 <p class="hidden" id="result"></p>
 
-  
-
-
   <section class="hidden" id="history-content">
     <div id="history-info"></div>
     <small></small>
   </section>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
   <script src="/main.js" defer async></script>
 </body>
