--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
     <form id="clear-form" class="saveoptions">
       <input type="submit" value="Clear">
     </form>
-  
+
   </section>
 
-<p class="hidden" id="result"></p>
+  <!-- Search Results section -->
+  <section class="hidden" id="search-result">
+
+  </section>
 
 
   <!-- History section -->
@@ -90,7 +93,7 @@
   </section>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
   <script src="/main.js" defer async></script>
 </body>
 
