--- a/index.html
+++ b/index.html
@@ -75,13 +75,10 @@
     <form id="clear-form" class="saveoptions">
       <input type="submit" value="Clear">
     </form>
-
+  
   </section>
 
-  <!-- Search Results section -->
-  <section class="hidden" id="search-result">
-
-  </section>
+<section class="hidden" id="search-result"></section>
 
 
   <!-- History section -->
@@ -93,7 +90,7 @@
   </section>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
   <script src="/main.js" defer async></script>
 </body>
 
