--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/style.css">
   <title>Travel Time</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Megrim&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -75,10 +76,10 @@
     <form id="clear-form" class="saveoptions">
       <input type="submit" value="Clear">
     </form>
-  
+
   </section>
 
-<section class="hidden" id="search-result"></section>
+  <section class="hidden" id="search-result"></section>
 
 
   <!-- History section -->
@@ -90,7 +91,7 @@
   </section>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
   <script src="/main.js" defer async></script>
 </body>
 
