--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/style.css">
   <title>Travel Time</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Megrim&family=Overlock:wght@700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Megrim&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js" defer async></script>
   <script src="/main.js" defer async></script>
 </head>
